master: HA storage

--- a/Architect storage infrastructure in Azure/4 .Highly available storage.md
+++ b/Architect storage infrastructure in Azure/4 .Highly available storage.md
@@ -1,7 +1,79 @@
 # [Make your application storage highly available with read-access geo-redundant storage](https://docs.microsoft.com/en-au/learn/modules/ha-application-storage-with-grs/index)
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/ha-application-storage-with-grs/1-introduction)
 - [Understand the role of an Azure storage account and its replication features](https://docs.microsoft.com/en-au/learn/modules/ha-application-storage-with-grs/2-storage-account-replication-features)
+  - Data redundancy
+    - **Locally redundant storage (LRS)**
+      - Locally redundant storage replicates data and stores **three copies** across **fault domains**, or racks of hardware, within a single datacenter facility in **one region**.
+      - protects your data from **hardware failures**
+      - aren't protected if there's a **datacenter outage**
+    - **Zone-redundant storage (ZRS)**
+      - Zone-redundant storage replicates your data across **three storage clusters** in a **region**. Each cluster is physically separated from the other two, which means that each cluster is supplied by separate utilities, such as power or networking.
+      - protects your data from **datacenter failures**
+      - aren't protected if there's a **regional outage**
+    - **Geographically redundant storage (GRS)**
+      - Geographically redundant, or geo-redundant, storage provides multiple levels of replication. Your data is replicated three times within the primary region, and then this set is replicated to a secondary region.
+      - protects your data from **regional failures**
+      - data in the **secondary region** is **inaccessible** until the primary region has failed
+    - **Read-access geo-redundant storage (RA-GRS)**
+      - When failover starts, DNS entries that point to the primary region are updated to point to the secondary region. Microsoft currently controls the DNS failover process.
+      - When you use RA-GRS, you need to ensure that your application knows which endpoint it's interacting with. The secondary region has "-secondary" appended to the name of the endpoint.
+      - After the failover and DNS endpoint updates are complete, the storage account is set back to LRS. You're responsible for reverting the replication settings from LRS to RA-GRS or GRS after the primary region becomes available again.
+  - When to use which?
+    ||Overview|Copies|Use case|
+    |---|---|---|---|
+    |**LRS**|Replicates data in a single datacenter|**3**|Ensures that your data is highly available but, for compliance reasons, must be kept local|
+    |**ZRS**|Stores copies of data across multiple datacenters|**3**|A higher durability option for block storage, where data can stay in only one region|
+    |**GRS**|Stores copies in a local datacenter, like LRS, but then stores three more copies in a datacenter in another region|**6**|Where you need to ensure that your data and systems are always available despite datacenter or region outages|
+    |**RA-GRS**|Same as GRS, but offers read access in the secondary datacenter in the other region|**6**|Where your applications (especially those with many read requests) can read data from other regions, but also to ensure that read operations are always available even if the primary region is down|
 - [Exercise - Create an Azure storage account](https://docs.microsoft.com/en-au/learn/modules/ha-application-storage-with-grs/3-exercise-create-storage-account)
+  - use the sku 
+    ```bash
+    STORAGEACCT=$(az storage account create \
+        --resource-group [Sandbox resource group] \
+        --name healthcareapp$RANDOM \
+        --sku Standard_RAGRS \
+        --output tsv \
+        --query "name")
+    echo $STORAGEACCT
+    ```
 - [Design HA applications to handle disaster recovery](https://docs.microsoft.com/en-au/learn/modules/ha-application-storage-with-grs/4-design-applications-ha-dr)
+  - How an account failover works
+    - When you configure a storage account GRS or RA-GRS, the client writes data to the primary endpoint or region. The data is then automatically replicated across to the secondary region.
+    - When failover occurs, the secondary region becomes your new primary region, and all data is then accessible from this new primary region. All **DNS records**, which relate to your storage account, have their DNS endpoints updated to point to the new primary region. This redirection requires no changes to your application code.
+    - Failover is automatic and controlled by Microsoft.  A manual failover of an Azure storage account isn't possible in a majority of the Azure regions.
+    - However, Microsoft has made a new feature available in WestUS2 and CentralUS regions, with which you can manually failover the storage account by using the following command:
+      - `az storage account failover --name "storageaccountname"`
+  - Design a resilient application
+    - **Resiliency**: The ability to recover from a failure and continue to function, to avoid downtime and data loss.
+    - **High availability**: The ability to continue to function in a healthy state in the event of a hardware fault, a server fault, or network issues that affect one or more components of the application.
+    - **Disaster recovery**: The ability to recover if a major incident affects the services that host the application, such as a datacenter outage or complete regional outage. 
+      - Disaster recovery includes manually failing over an application by using Azure Site Recovery. 
+        - With Azure Site Recovery, you can fail over servers between Azure regions or Azure backups. You can then restore a database or application from a backup.
+    - **Eventual consistency**: RA-GRS works by replicating data from the primary endpoint to the secondary endpoint. The data, which is replicated between the regions, is unavailable at the secondary location immediately. Eventual consistency means that all the transactions on the primary region will eventually appear in the secondary region. The data isn't lost, but there might be some lag.
+  - Best practices for cloud-based applications with RA-GRS
+    - **Retry transient failures**
+      - The application must have the capability to retry a service if it believes the fault is likely to be transient, before listing it as failed.
+    - **Handle failed writes**
+      -  If a long-lasting outage (more than a few seconds) occurs at the primary location, your application must run in read-only mode. You can achieve read-only mode in several ways:
+         - Temporarily return an error from all write operations
+         - Buffer write operations, perhaps by using a queue, and enact them later when the write location becomes available.
+         - Write updates to a different storage account in another location. Merge these changes into the storage account at the primary location when it becomes available.
+         - Trigger the application to disable all write operations, and inform the user that the application is running in read-only mode. 
+      - An application that uses the Azure Storage client library can set the LocationMode of a read request to one of the following values:
+        - **PrimaryOnly**: The read request fails if the primary location is unavailable. This failure is the default behavior.
+        - **PrimaryThenSecondary**: Try the primary location first, and then try the secondary location if the primary location is unavailable. Fail if the secondary location is also unavailable.
+        - **SecondaryOnly**: Try only the secondary location, and fail if it's not available.
+        - **SecondaryThenPrimary**: Try the secondary location first, and then try the primary location.
+    - **Handle eventual consistency**
+      - Be prepared to handle out-dated data if it's read from a secondary region.
+    - **Use the Circuit Breaker pattern**
+      - intro to the pattern
+        - In some situations, when an outage is severe, it makes sense for the application to stop retrying the operation and instead start failover to a secondary site.
+        - To prevent an application from retrying operations that have failed, you can implement [the Circuit Breaker pattern](https://docs.microsoft.com/azure/architecture/patterns/circuit-breaker).
+        - The Circuit Breaker pattern forces the application to fail over to the secondary site, which allows the application to resume its normal service. At the same time, the circuit breaker continues to check on whether the resources on the primary site are back online. 
+        - The difference between the Circuit Breaker pattern and the Retry pattern is that the Retry pattern allows an application to keep retrying a connection to a resource, which might be offline. The Circuit Breaker pattern prevents this behavior and fails over the application to the secondary connection.
+      - Use the pattern with storage account
+        - When you implement the **Circuit Breaker pattern**, set the **LocationMode** of read requests appropriately. Most of the time, you should set this mode to **PrimaryThenSecondary**. If the read from the primary location times out, the secondary location is used. However, this process can slow down an application if it's done repeatedly. After the circuit breaker has detected that the primary location is unavailable, it should switch the mode to **SecondaryOnly**. This action ensures that read operations don't wait for a timeout from the primary location before trying the secondary location. When the circuit breaker estimates that the primary location has been repaired, it can revert back to the PrimaryThenSecondary mode.
+
 - [Exercise - Deploy a highly available application](https://docs.microsoft.com/en-au/learn/modules/ha-application-storage-with-grs/5-exercise-deploy-ha-application)
 - [Summary](https://docs.microsoft.com/en-au/learn/modules/ha-application-storage-with-grs/6-summary)
